--- a/front end/index.html
+++ b/front end/index.html
@@ -4,16 +4,57 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Bootstrap demo</title>
+  <title>Posts page</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-  <script src="front.js" defer></script>
+  <script src="js/front.js" defer></script>
 </head>
 
 <body>
   <div class="container">
     <h1>Posts page</h1>
 
+    <div id="post-container" class="row g-3">
+      <div class="col-lg-4 col-sm-6">
+        <!-- card start -->
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+              content.</p>
+            <a href="#" class="btn btn-info text-white">Read more</a>
+          </div>
+        </div>
+        <!-- card end -->
+      </div>
+      <div class="col-lg-4 col-sm-6">
+        <!-- card start -->
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+              content.</p>
+            <a href="#" class="btn btn-info text-white">Read more</a>
+          </div>
+        </div>
+        <!-- card end -->
+      </div>
+      <div class="col-lg-4 col-sm-6">
+        <!-- card start -->
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+              content.</p>
+            <a href="#" class="btn btn-info text-white">Read more</a>
+          </div>
+        </div>
+        <!-- card end -->
+      </div>
+    </div>
 
 
 
