--- a/front end/index.html
+++ b/front end/index.html
@@ -8,6 +8,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <script src="js/front.js" defer></script>
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -32,7 +33,14 @@
   </nav>
 
   <div class="container">
+
+
+
     <h1>Posts page</h1>
+
+    <div id="error-el-top" class="alert alert-danger" role="alert"></div>
+
+
 
     <div id="post-container" class="row g-3">
       <div class="col-lg-4 col-sm-6">
